<resources>
    <string name="app_name">Music</string>
    <string name="menu_play_via_group_play">Play via Group Play</string>
    <string name="menu_share_via">Share via</string>
    <string name="menu_set_as">Set as</string>
    <string name="menu_set_as_wifi">Set as</string>
    <string name="menu_via_bluetooth">Listen via Bluetooth</string>
    <string name="menu_via_device">Listen via device</string>
    <string name="menu_details">Details</string>
    <string name="menu_save_as_playlist">Save as playlist</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_search_my_music">Search</string>
    <string name="menu_add_to_playlist">Add to playlist</string>
    <string name="menu_add_to_favourites">Add to favourites</string>
    <string name="menu_remove_from_favourites">Remove from favourites</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_title">Edit title</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_create_playlist">Create playlist</string>
    <string name="menu_add_tracks">Add tracks</string>
    <string name="menu_list">List view</string>
    <string name="menu_grid">Grid view</string>
    <string name="menu_shuffle">Shuffle</string>
    <string name="menu_end">End</string>
    <string name="menu_change_order">Change order</string>
    <string name="menu_download">Download</string>
    <string name="menu_share_with_other_devices">Send to another device</string>
    <string name="menu_select">Select</string>
    <string name="menu_samsung_music">Samsung Music</string>
    <string name="menu_scan_for_nearbydevices">Scan for nearby devices</string>
    <string name="scrubbing_normal_speed_msg">"Detailed seek (1x).
Slide your finger upwards to adjust the scrubbing rate."</string>
    <string name="scrubbing_half_speed_msg">"Detailed seek (1/2x).
Slide your finger upwards to adjust the scrubbing rate."</string>
    <string name="scrubbing_quarter_speed_msg">"Detailed seek (1/4x).
Slide your finger upwards to adjust the scrubbing rate."</string>
    <string name="unalbe_show_lyric_with_no_local_song">Unable to view lyrics for tracks stored on other devices.</string>
    <string name="settings">Settings</string>
    <string name="music_auto_off">Music auto off</string>
    <string name="sound_alive">SoundAlive</string>
    <string name="play_speed">Play speed</string>
    <string name="voice_control">Voice control</string>
    <string name="voice_control_summary">Use voice commands to control the music player</string>
    <string name="tabs">Tabs</string>
    <string name="settings_playlists">Playlists</string>
    <string name="tracks">Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="composers">Composers</string>
    <string name="years">Years</string>
    <string name="folders">Folders</string>
    <string name="favourite_tracks">Favourite tracks</string>
    <string name="most_played">Most played</string>
    <string name="recently_played">Recently played</string>
    <string name="recently_added">Recently added</string>
    <string name="default_playlists">Default playlists</string>
    <string name="my_playlists">My Playlists</string>
    <string name="download_all">Download all</string>
    <string name="no_square_selected">Tap and swipe across the cells in the music square to create a playlist based on mood.</string>
    <string name="adapt_sound">Adapt Sound</string>
    <string name="adapt_sound_check_again">Check Adapt Sound again</string>
    <string name="after_15_min">After 15 mins</string>
    <string name="after_30_min">After 30 mins</string>
    <string name="after_1_hour">After 1 hr</string>
    <string name="after_1_hour_30_min">After 1 hr 30 mins</string>
    <string name="after_2_hour">After 2 hrs</string>
    <string name="after_1_min">After 1 min</string>
    <string name="after_n_mins">After %d mins</string>
    <string name="after_1_hr">After 1 hr</string>
    <string name="after_1_hr_1_min">After 1 hr 1 min</string>
    <string name="after_1_hr_n_mins">After 1 hr %d mins</string>
    <string name="after_n_hrs">After %d hrs</string>
    <string name="after_n_hrs_1_min">After %d hrs 1 min</string>
    <string name="after_n_hrs_n_mins" formatted="false">After %d hrs %d mins</string>
    <string name="auto">Auto</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="dance">Dance</string>
    <string name="jazz">Jazz</string>
    <string name="classic">Classic</string>
    <string name="normal">Normal</string>
    <string name="vocal">Vocal</string>
    <string name="bass_boost">Bass boost</string>
    <string name="treble_boost">Treble boost</string>
    <string name="srs_surround">SRS Surround</string>
    <string name="srs_wow_hd">SRS WOW HD</string>
    <string name="tube_amp_effect">Tube amp</string>
    <string name="virtual_71_ch">Virtual 7.1 ch</string>
    <string name="externalization">Externalisation</string>
    <string name="cafe">Cafe</string>
    <string name="concert_hall">Concert hall</string>
    <string name="custom">Custom</string>
    <string name="equaliser">Equaliser</string>
    <string name="extended">Extended</string>
    <string name="eq_1">60</string>
    <string name="eq_2">150</string>
    <string name="eq_3">400</string>
    <string name="eq_4">1.1k</string>
    <string name="eq_5">3.1k</string>
    <string name="eq_6">8k</string>
    <string name="eq_7">16k</string>
    <string name="ext_1">3D</string>
    <string name="ext_2">Bass</string>
    <string name="ext_3">Reverb level</string>
    <string name="ext_4">Room size</string>
    <string name="ext_5">Clarity</string>
    <string name="sound_effect_works_in_earphone_only">This sound effect works in earphone mode only.</string>
    <string name="sound_effect_works_in_earphone_bt_only">This sound effect works in earphone and Bluetooth headset modes only.</string>
    <string name="sound_effect_not_supported_by_bluetooth">Current sound effect not supported by Bluetooth.</string>
    <string name="sound_effect_not_supported_by_line_out">Current sound effect not supported by line out.</string>
    <string name="sound_effect_supported_only_headphones">Sound effects only available while headphones connected.</string>
    <string name="sound_effect_not_supported_by_hdmi">Current sound effect not supported by HDMI.</string>
    <string name="sound_3d_effect_not_supported">3D effect not supported by speaker.</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="effect">Effect</string>
    <string name="studio">Small room</string>
    <string name="club">Large room</string>
    <string name="none">None</string>
    <string name="new_sound_alive_treble">Treble</string>
    <string name="new_sound_alive_bass">Bass</string>
    <string name="new_sound_alive_vocal">Vocal</string>
    <string name="new_sound_alive_instrument">Instrument</string>
    <string name="new_sound_alive_tube_amp_effect_explanation">Simulates the timbre of a tube amp.</string>
    <string name="new_sound_alive_virtual_71_ch_explanation">Simulate the effect of virtual 7.1 channel surround sound.</string>
    <string name="new_sound_alive_auto_off">Auto mode disabled.</string>
    <string name="new_sound_alive_none_explanation">No effects.</string>
    <string name="new_sound_alive_studio_explanation">Simulates the reverb of a small space, e.g. a studio.</string>
    <string name="new_sound_alive_club_explanation">Simulates the reverb of a large room, e.g. a theatre.</string>
    <string name="new_sound_alive_concert_hall_explanation">Simulates the reverb of a concert hall.</string>
    <string name="new_soundAlive_not_applied_during_pause">Equaliser settings will be applied when music played</string>
    <string name="new_soundalive_3D">3D</string>
    <string name="new_soundalive_bass">Bass</string>
    <string name="new_soundalive_clarity">Clarity</string>
    <string name="music_tap_to_play_music">Tap to play music</string>
    <string name="music_magazine_no_music_comment">You can play your own music and discover new songs seamlessly.</string>
    <string name="smart_volume">Smart volume</string>
    <string name="smart_volume_on">Smart volume is enabled</string>
    <string name="smart_volume_adjust_msg">The volume of all tracks will be adjusted to level %d.</string>
    <string name="smart_volume_summary">"Automatically adjust each track's volume to an equal level."</string>
    <string name="nearby_devices">Nearby devices</string>
    <string name="my_device">My device</string>
    <string name="change_player">Change player</string>
    <string name="failed_to_connect_network">Failed to connect network.</string>
    <string name="unable_to_play">Unable to play</string>
    <string name="player_is_not_available_msg">Player is not available. Check the network status and connected device</string>
    <string name="dlna_refresh_option">Search for nearby devices</string>
    <string name="dlna_refresh_start_msg">Scan started. Device list will soon be updated automatically</string>
    <string name="dlna_refresh_no_result_msg">No devices found. Scanning for nearby devices will continue in background.</string>
    <string name="nearby_devices_found">Nearby devices found</string>
    <string name="network_error_occurred_msg">Network error occurred. Try again.</string>
    <string name="file_size">File size</string>
    <string name="available_devices">Available devices</string>
    <string name="scanning">SCANNING...</string>
    <string name="select_device">Select device</string>
    <string name="unable_to_use_ff_and_rew_msg">Unable to use fast forward and rewind when nearby devices are enabled.</string>
    <string name="dlna_no_item">After you share tracks with the connected devices, they will be shown here.</string>
    <string name="disconnected_devices">Disconnected from %s. Check the network status and the connected device.</string>
    <string name="changeplayer_descrpition_playvia">Via home network</string>
    <string name="changeplayer_descrpition_mirroror">Via Screen mirroring</string>
    <string name="unable_to_scan_device">Unable to scan for connected devices while Wi-Fi is off. Tap Change player again or enable Screen Mirroring to automatically turn on Wi-Fi and scan for connected devices.</string>
    <string name="nearby_devices_not_found_tap_refreshicon">No devices have been found. Enable the Share content function on your nearby devices, and then tap the refresh icon above.</string>
    <string name="unable_to_scan_header">Unable to scan for devices</string>
    <string name="unable_to_scan_device_for_unsupported_wfd">Unable to scan for connected devices while Wi-Fi is off. To scan for connected devices, turn on Wi-Fi and tap Change player again.</string>
    <string name="wfd">Screen Mirroring</string>
    <string name="music_square">Music square</string>
    <string name="change_horizontal_axis">Change horizontal axis</string>
    <string name="lyrics">Lyrics</string>
    <string name="tts_rewind">Rewind</string>
    <string name="tts_fast_forward">Fast forward</string>
    <string name="tts_volume">Volume</string>
    <string name="tts_more_options">More options</string>
    <string name="tts_add_to_playlist">Add to playlist</string>
    <string name="menu_add_to_personal_page">Move to Private</string>
    <string name="menu_remove_from_personal_page">Remove from Private</string>
    <string name="lgt_mp3_ringtone">MP3 ringtone</string>
    <string name="list_menu_move_to_knox">Move to KNOX</string>
    <string name="list_menu_remove_from_KNOX">Move to Personal mode</string>
    <string name="now_playing">Now playing</string>
    <string name="stop_playing_music_q">Stop playing music?</string>
</resources>