<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/action_mode_menu1" android:orderInCategory="0">
        <item android:icon="@drawable/tw_actionbar_btn_addtoplaylist_normal" android:id="@id/add_to_playlist" android:title="@string/menu_add_to_playlist" android:showAsAction="ifRoom" />
        <item android:icon="@drawable/music_detail_actionbar_icon_edit" android:id="@id/edit_item" android:visible="false" android:title="@string/menu_edit" android:showAsAction="ifRoom" />
        <item android:icon="@drawable/tw_actionbar_btn_delete_normal" android:id="@id/remove_item" android:visible="false" android:title="@string/menu_remove" android:showAsAction="ifRoom" />
        <item android:icon="@drawable/tw_actionbar_btn_delete_normal" android:id="@id/delete_item" android:title="@string/menu_delete" android:showAsAction="ifRoom" />
    </group>
    <group android:id="@id/action_mode_menu2" android:orderInCategory="10">
        <item android:id="@id/set_as" android:title="@string/menu_set_as" android:showAsAction="never" />
        <item android:id="@id/add_to_favorites" android:title="@string/menu_add_to_favourites" android:showAsAction="never" />
        <item android:icon="@drawable/tw_actionbar_btn_delete_normal" android:id="@id/remove_from_favorites" android:title="@string/menu_remove_from_favourites" android:showAsAction="never" />
        <item android:icon="@drawable/header_button_icon_move_knox" android:id="@id/move_to_knox" android:visible="false" android:title="@string/list_menu_move_to_knox" android:showAsAction="never" />
        <item android:icon="@drawable/header_button_icon_move_knox" android:id="@id/remove_from_knox" android:visible="false" android:title="@string/list_menu_remove_from_KNOX" android:showAsAction="never" />
        <item android:id="@id/add_to_personal_folder" android:visible="false" android:title="@string/menu_add_to_personal_page" android:showAsAction="never" />
        <item android:id="@id/remove_from_personal_folder" android:visible="false" android:title="@string/menu_remove_from_personal_page" android:showAsAction="never" />
        <item android:id="@id/details" android:title="@string/menu_details" android:showAsAction="never" />
    </group>
</menu>