<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/context_group_1" android:orderInCategory="0">
        <item android:id="@id/set_as" android:title="@string/menu_set_as" />
        <item android:id="@id/add_to_playlist" android:title="@string/menu_add_to_playlist" />
        <item android:id="@id/add_to_favorites" android:title="@string/menu_add_to_favourites" />
        <item android:id="@id/remove_from_favorites" android:visible="false" android:title="@string/menu_remove_from_favourites" />
    </group>
    <group android:id="@id/context_group_2" android:orderInCategory="20">
        <item android:id="@id/delete_item" android:title="@string/menu_delete" />
        <item android:id="@id/remove_item" android:visible="false" android:title="@string/menu_remove" />
        <item android:id="@id/details" android:title="@string/menu_details" />
    </group>
</menu>