<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <CheckBox android:textSize="22.0dip" android:textColor="@color/new_soundAlive_auto_text" android:ellipsize="marquee" android:id="@id/new_soundalive_preset_auto_checkbox" android:paddingLeft="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/new_soundalive_preset_auto_checkbox_margin_left" android:layout_marginTop="@dimen/new_soundalive_preset_auto_checkbox_margin_top" android:text="@string/auto" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/new_soundalive_preset_auto_checkbox">
            <GridView android:gravity="center" android:id="@id/new_soundalive_preset_gridview" android:background="@drawable/sound_alive_square_bg" android:scrollbars="none" android:layout_width="@dimen/new_soundalive_preset_gridview_width" android:layout_height="@dimen/new_soundalive_preset_gridview_width" android:horizontalSpacing="1.0dip" android:verticalSpacing="1.0dip" android:stretchMode="columnWidth" android:columnWidth="0.0dip" android:numColumns="5" android:layout_centerInParent="true" />
            <TextView android:textSize="14.0dip" android:textColor="@color/new_soundAlive_gridView_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/new_sound_alive_treble" android:layout_above="@id/new_soundalive_preset_gridview" android:layout_centerHorizontal="true" android:fontFamily="sec-roboto-regular" />
            <TextView android:textSize="14.0dip" android:textColor="@color/new_soundAlive_gridView_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/new_sound_alive_bass" android:layout_below="@id/new_soundalive_preset_gridview" android:layout_centerHorizontal="true" android:fontFamily="sec-roboto-regular" />
            <TextView android:textSize="14.0dip" android:textColor="@color/new_soundAlive_gridView_text2" android:id="@id/new_soundalive_preset_left_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:text="@string/new_sound_alive_instrument" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:rotation="270.0" android:fontFamily="sec-roboto-regular" />
            <TextView android:textSize="14.0dip" android:textColor="@color/new_soundAlive_gridView_text2" android:id="@id/new_soundalive_preset_right_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:text="@string/new_sound_alive_vocal" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:rotation="90.0" android:fontFamily="sec-roboto-regular" />
        </RelativeLayout>
    </RelativeLayout>
</merge>