<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/music_player_control_view" android:layout_width="@dimen/tablet_music_player_control_view" android:layout_height="wrap_content" android:layout_marginTop="@dimen/tablet_music_player_controller_top_margin" android:layout_marginBottom="@dimen/tablet_music_player_controller_bottom_margin" android:splitMotionEvents="false">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/list_btn" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/tablet_music_player_side_button_margin" android:src="@drawable/music_play_control_list_btn" android:contentDescription="@string/menu_list" />
        <ImageView android:id="@id/nowplaying_thumbnail" android:background="@drawable/music_play_control_list_btn" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/tablet_music_player_side_button_margin" android:scaleType="center" android:contentDescription="@string/now_playing" />
        <ImageView android:id="@id/prev_btn" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/tablet_music_player_side_button_next_margin_right" android:src="@drawable/music_play_control_prev_btn" android:contentDescription="@string/tts_rewind" />
        <ImageView android:id="@id/play_pause_btn" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/tablet_music_player_side_button_next_margin_right" android:src="@drawable/music_play_control_play_btn" />
        <ImageView android:id="@id/next_btn" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/tablet_music_player_next_button_next_margin_right" android:src="@drawable/music_play_control_next_btn" android:contentDescription="@string/tts_fast_forward" />
        <ImageView android:id="@id/music_player_shuffle_btn" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/tablet_music_player_side_button_play_margin_right" android:src="@drawable/music_play_menu_shuffle_off_btn" android:minWidth="30.0dip" />
        <ImageView android:id="@id/music_player_repeat_btn" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/music_play_menu_repeat_all_btn" android:minWidth="30.0dip" />
        <ImageView android:id="@id/music_player_add_to_playlist_btn" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/music_play_control_add_to_playlist" android:minWidth="30.0dip" android:contentDescription="@string/tts_add_to_playlist" />
    </LinearLayout>
</merge>